feat: Complete admin panel with full CRUD operations
- Create admin dashboard with navigation to all sections
- Implement player management (add, edit, delete)
- Implement game management (register, edit, delete)
- Implement stats management with auto-calculated metrics
- Add AddPlayerDialog with position selection
- Add EditPlayerDialog for updating player info
- Add DeletePlayerDialog with confirmation
- Add AddGameDialog with date, opponent, score, result
- Add EditGameDialog for updating game details
- Add DeleteGameDialog with confirmation
- Add EditStatsDialog with automatic AVG/OBP/SLG calculation
- Update Navbar to include Admin link
- Add form validation and error handling
- Install required dependencies (react-hook-form, zod)
- Add Shadcn form, input, label, select, dialog components
- Maintain responsive design and dark mode support

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "migrate": "tsx src/scripts/migrate-data.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -27,8 +31,10 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
